# TradingAgents

./: .env.example  .gitignore  CLEANUP.md  CLI_LEARNING_COMMANDS.md  CONTINUOUS_LEARNING_PLAN.md  DEBUG_SMC_STATE.md  ENTRY_STRATEGY_SUMMARY.md  HOW_TO_USE_CONTINUOUS_LEARNING.md  HOW_TRADES_ARE_ASSESSED.md  IMPLEMENTATION_PLAN_UPDATED.md  INTEGRATION_WITH_EXISTING_SYSTEM.md  INTELLIGENT_EXECUTION_GUIDE.md  PHASE2_INTEGRATION_GUIDE.md  PHASE3_INTEGRATION_GUIDE.md  PHASE4_PHASE5_INTEGRATION_GUIDE.md  README.md  SMART_MONEY_CONCEPTS_GUIDE.md  SMC_ANALYZE_INTEGRATION.md  SMC_FINAL_FIX.md  SMC_FIX_NOTES.md  SMC_WORKFLOW_SUMMARY.md  TEST_SMC_STATE.md  add_memories_standalone.py  add_trading_memory.py  automation_configs.json  automation_symbol_limits.json  create_memory.py  daily_cycle.pid  demo_entry_display.py  docker-compose.yml  ecosystem.config.js  main.py  package-lock.json  portfolio_config.yaml  portfolio_state.json  pyproject.toml  quant_automation_state.json  quant_automation_state_btc_smc_basic.json  quant_automation_state_btc_smc_lmm.json  quant_automation_state_btcusd_smc_quant_deep.json  (+25 more)
.claude/: settings.json  settings.local.json
cli/: execution_commands.py  learning_commands.py  main.py  output.py  portfolio_commands.py  review_batch_command.py  smc_commands.py  utils.py
data/: state.db
docs/: COMPREHENSIVE_PLAN_SUMMARY.md  HYBRID_SMC_GUIDE.md  LEARNING_SYSTEM_GUIDE.md  LLM_CLIENT_API_GUIDE.md  MIGRATION_DECISIONS_TO_DB.md  SMC_GUIDE.md  SMC_REFERENCE.md  SMC_TRADE_PLAN_SUMMARY.md  adaptive_evolution_plan.md  automation.md  backtest_results.md  (+4 more)
(+848 files in other folders)
